@@ -31,6 +31,25 @@
 
 #include <klocale.h>
 
+namespace {
+
+class OverWriteResolver : public Tellico::MergeConflictResolver {
+public:
+  OverWriteResolver(bool overwrite_) : m_overWrite(overwrite_) {};
+  Tellico::MergeConflictResolver::Result resolve(Tellico::Data::EntryPtr,
+                                                 Tellico::Data::EntryPtr,
+                                                 Tellico::Data::FieldPtr,
+                                                 const QString& value1 = QString(),
+                                                 const QString& value2 = QString()) {
+    return m_overWrite ? Tellico::MergeConflictResolver::KeepSecond : Tellico::MergeConflictResolver::KeepFirst;
+  }
+
+private:
+  bool m_overWrite;
+};
+
+}
+
 using Tellico::Command::UpdateEntries;
 
 namespace Tellico {
@@ -51,7 +70,8 @@ public:
   }
 
   virtual void redo() {
-    Data::Document::mergeEntry(m_currEntry, m_newEntry, m_overWrite);
+    OverWriteResolver res(m_overWrite);
+    Data::Document::mergeEntry(m_currEntry, m_newEntry, &res);
   }
   virtual void undo() {} // does nothing
   Data::EntryPtr orphanEntry() const { return m_orphanEntry; }
