@@ -76,7 +76,7 @@ void EntryUpdateJob::slotDone() {
     const int matchToBeat = (m_mode == PerfectMatchOnly ? EntryComparison::ENTRY_PERFECT_MATCH
                                                         : EntryComparison::ENTRY_GOOD_MATCH);
     if(m_bestMatchScore > matchToBeat) {
-      Data::Document::mergeEntry(m_entry, m_bestMatchEntry, false /*overwrite*/);
+      Data::Document::mergeEntry(m_entry, m_bestMatchEntry);
     }
   }
   emitResult();
